Update portuguese language page

--- a/pt/index.html
+++ b/pt/index.html
@@ -44,13 +44,13 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Expari&ecirc;ncia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Educaci&oacute;n</a>
+          <a class="nav-link js-scroll-trigger" href="#education">Educa&ccedil;&atilde;o</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Destrezas</a>
+          <a class="nav-link js-scroll-trigger" href="#skills">Compet&ecirc;ncias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Idiomas</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">L&iacute;nguas</a>
         </li>
       </ul>
     </div>
@@ -66,7 +66,7 @@
         <div class="subheading mb-5">Avenida Samuel Roman Rojas 926 · Rancagua, Chile · +56 (9) 3487-4823 ·
           <a href="mailto:afinol@gmail.com">afinol@gmail.com</a>
         </div>
-        <p class="lead mb-5">Tengo experiencia como Administrador de Sistemas GNU/Linux, y estoy iniciando como desarrollador web utilizando los frameworks &aacute;giles como Laravel, Django y VueJS.</p>
+        <p class="lead mb-5">Tenho experi&ecirc;ncia como Administrador de Sistemas GNU/Linux e estou come&ccedil;ando como desenvolvedor web usando estruturas &aacute;geis como Laravel, Django e VueJS.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/alfredo-finol-linux-sysadmin/">
             <i class="fab fa-linkedin-in"></i>
@@ -88,47 +88,47 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experiencia</h2>
+        <h2 class="mb-5">Expari&ecirc;ncia</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Consultor de desarrollo web</h3>
+            <h3 class="mb-0">Consultor de Desenvolvimento Web</h3>
             <div class="subheading mb-3">JPV Asociados - Santiago de Chile - Chile</div>
-            <p>Desarrollo de una aplicaci&oacute;n web con Laravel y MySQL, para la generaci&oacute;n de reportes y el env&iacute;o de &eacute;stos a trav&eacute;s de un correo electr&oacute;nico.</p>
+            <p>Desenvolvimento de uma aplica&ccedil;&atilde;o web com Laravel e MySQL, para gera&ccedil;&atilde;o de relat&oacute;rios e envio destes pelo email.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ago 2019 - Sep 2019</span>
+            <span class="text-primary">Ago 2019 - Set 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">T&eacute;cnico de recursos inform&aacute;ticos</h3>
+            <h3 class="mb-0">T&eacute;cnico em Tecnologia da Informa&ccedil;&atilde;o</h3>
             <div class="subheading mb-3">Universidad del Zulia - Maracaibo - Venezuela</div>
             <p>
-              Instalaci&oacute;n y configuraci&oacute;n de servidores (web, base de datos, proxy, respaldo, etc). &nbsp;
-              Administraci&oacute;n de correos electronicos. &nbsp;
-              Mantenimiento preventivo y correctivo de servidores en GNU/Linux. &nbsp;
-              Administraci&oacute;n de las bases de datos en MySQL y PostgreSQL. &nbsp;
-              Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores. &nbsp;
-              Desarrollo de aplicaci&oacute;nes web en PHP (nativo) y MySQL.
+              Instala&ccedil;&atilde;o e configura&ccedil;&atilde;o de servidores (web, banco de dados, proxy, backup, etc). &nbsp;
+              Administra&ccedil;&atilde;o de e-mails. &nbsp;
+              Manuten&ccedil;&atilde;o preventiva e corretiva de servidores em GNU/Linux. &nbsp;
+              Administra&ccedil;&atilde;o de bancos de dados no MySQL e PostgreSQL. &nbsp;
+              Desenvolvimento de script (bash) para melhoria das fun&ccedil;&otilde;es do servidor. &nbsp;
+              Desenvolvimento de aplica&ccedil;&otilde;es web em PHP (nativo) e MySQL.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2012 - Nov 2018</span>
+            <span class="text-primary">Jan 2012 - Nov 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Administrador de Infraestructura</h3>
+            <h3 class="mb-0">Administrador de Infraestrutura</h3>
             <div class="subheading mb-3">Delcos Group - Maracaibo - Venezuela</div>
             <p>
-              Instalaci&oacute;n y configuraci&oacute;n de los servidores en AWS y locales. &nbsp;
-              Mantenimiento preventivo y correctivo del servidores remotos y local con Debian GNU/Linux. &nbsp;
-              Administraci&oacute;n de bases de datos MySQL y PostgreSQL. &nbsp;
-              Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores (AWS y local). &nbsp;
-              Desarrollo de aplicaci&oacute;nes web com Python (Django) y PostgreSQL.
+              Instala&ccedil;&atilde;o e configura&ccedil;&atilde;o de servidores na AWS e local. &nbsp;
+              Manuten&ccedil;&atilde;o preventiva e corretiva de servidores remotos e locais com o Debian GNU/Linux. &nbsp;
+              Administra&ccedil;&atilde;o de bancos de dados MySQL e PostgreSQL. &nbsp;
+              Desenvolvimento de script (bash) para melhoria das fun&ccedil;&otilde;es dos servidores (AWS y local). &nbsp;
+              Desenvolvimento de aplica&ccedil;&otilde;es web com Python (Django) e PostgreSQL.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -138,9 +138,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Desarrollador PHP Jr</h3>
+            <h3 class="mb-0">Desenvolvedor PHP Jr</h3>
             <div class="subheading mb-3">261 ITSolutions - Maracaibo - Venezuela</div>
-            <p>Desarrollo de una API para una aplicaci&oacute;n m&eacute;dica.</p>
+            <p>Desenvolvimento de uma API para aplica&ccedil;&atilde;o m&eacute;dica.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jul 2018 - Nov 2018</span>
@@ -149,35 +149,35 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Auxiliar docente</h3>
+            <h3 class="mb-0">Assistente de ensino</h3>
             <div class="subheading mb-3">UNEFA - Maracaibo - Venezuela</div>
-            <p>Transcripci&oacute;n y dise&ntilde;no de los diferentes libros escrito por los profesores de la instituci&oacute;n.</p>
+            <p>Transcri&ccedil;&atilde;o e design dos diferentes livros escritos pelos professores da institui&ccedil;&atilde;o.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2008 - Jul 2009</span>
+            <span class="text-primary">Mai 2008 - Jul 2009</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Apoyo t&eacute;cnico</h3>
+            <h3 class="mb-0">Suporte t&eacute;cnico</h3>
             <div class="subheading mb-3">REDFEC-LUZ - Maracaibo - Venezuela</div>
             <p>
-              Mantenimiento correctivo y preventivo de los equipos computacionales de la instituci&oacute;n. &nbsp;
-              Instalaci&oacute;n y configuraci&oacute;n de servidores en Debian GNU/Linux. &nbsp;
-              Instalaci&oacute;n y configuraci&oacute;n de red inal&aacute;mbrica.
+              Manuten&ccedil;&atilde;o corretiva e preventiva dos equipamentos de inform&aacute;tica da institui&ccedil;&atilde;o. &nbsp;
+              Instala&ccedil;&atilde;o e configura&ccedil;&atilde;o dos servidores em Debian GNU/Linux. &nbsp;
+              Instala&ccedil;&atilde;o e configura&ccedil;&atilde;o da rede Wi-Fi
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2007 - Jul 2009</span>
+            <span class="text-primary">Jan 2007 - Jul 2009</span>
           </div>
         </div>
   
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Instructor</h3>
+            <h3 class="mb-0">Instrutor</h3>
             <div class="subheading mb-3">ITN Consultores Asociados C.A. - Caracas - Venezuela</div>
-            <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
+            <p>Ditar aulas de computa&ccedil;&atilde;o (Introdu&ccedil;&atilde;o &agrave; computa&ccedil;&atilde;o e Introdu&ccedil;&atilde;o ao GNU / Linux).</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Mar 2007 - Abr 2007</span>
@@ -186,20 +186,20 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Instructor</h3>
+            <h3 class="mb-0">Instrutor</h3>
             <div class="subheading mb-3">Alonzo y Asociados - Caracas - Venezuela</div>
-            <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
+            <p>Ditar aulas de computa&ccedil;&atilde;o (Introdu&ccedil;&atilde;o &agrave; computa&ccedil;&atilde;o e Introdu&ccedil;&atilde;o ao GNU / Linux).</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2007 - Feb 2007</span>
+            <span class="text-primary">Jan 2007 - Fev 2007</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Transcriptor</h3>
+            <h3 class="mb-0">Transcritor</h3>
             <div class="subheading mb-3">Hacer Sistemas C.A. - Maracaibo - Venezuela</div>
-            <p>Transcribir partidas de nacimientos para el sistema desarrollado por la empresa.</p>
+            <p>Transcreva certid&otilde;es de nascimento para o sistema desenvolvido pela empresa.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Nov 2006</span>
@@ -208,31 +208,31 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">T&eacute;cnico en reparaci&oacute;n y mantenimiento de computadoras</h3>
+            <h3 class="mb-0">T&eacute;cnico de reparo e manuten&ccedil;&atilde;o de computadores.</h3>
             <div class="subheading mb-3">UDESA-LUZ - Maracaibo - Venezuela</div>
             <p>
-              Mantenimiento preventivo y correctivo de los equipos computacionales. &nbsp;
-              Instalaci&oacute;n de sistemas operativos. &nbsp;
-              Instalaci&oacute;n de distintas aplicaciones inform&aacute;ticas.
+              Manuten&ccedil;&atilde;o preventiva e corretiva de equipamentos de inform&aacute;tica. &nbsp;
+              Instala&ccedil;&atilde;o de sistemas operacionais. &nbsp;
+              Instala&ccedil;&atilde;o de diferentes aplicativos de computador.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2003 - Dic 2004</span>
+            <span class="text-primary">Jan 2003 - Dez 2004</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Analista-Programador</h3>
+            <h3 class="mb-0">Analista - Programador</h3>
             <div class="subheading mb-3">ElectroComputer C.A. - Caracas - Venezuela</div>
             <p>
-              Desarrollo de aplicaciones en Visual Basic 6.0. &nbsp;
-              Dise&ntilde;o de base de datos. &nbsp;
-              Analisis de sistemas.
+              Desenvolvimento de aplicativos no Visual Basic 6.0. &nbsp;
+              Design de banco de dados. &nbsp;
+              An&aacute;lise de sistemas.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2000 - Dic 2002</span>
+            <span class="text-primary">Jan 2000 - Dez 2002</span>
           </div>
         </div>
 
@@ -244,22 +244,22 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">Educaci&oacute;n</h2>
+        <h2 class="mb-5">Educa&ccedil;&atilde;o</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Universidad del Zulia - Maracaibo - Venezuela</h3>
-            <div class="subheading mb-3">Licenciado en Computaci&oacute;n</div>
+            <div class="subheading mb-3">Licenciatura em Computa&ccedil;&atilde;o</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Mar 2002 - Sin concluir</span>
+            <span class="text-primary">Mar 2002 - Inacabado</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">URBE - Maracaibo - Venezuela</h3>
-            <div class="subheading mb-3">Diplomado en Ingenier&iacute;a del Software</div>
+            <div class="subheading mb-3">Diploma em Engenharia de Software</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Nov 2005</span>
@@ -269,20 +269,20 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">I. U. T. Pedro Emilio Coll - Maracaibo - Venezuela</h3>
-            <div class="subheading mb-3">T. S. U. en inform&aacute;tica</div>
+            <div class="subheading mb-3">T&eacute;cnico Universit&aacute;rio em Inform&aacute;tica</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Sep 1998 - Jul 2001</span>
+            <span class="text-primary">Set 1998 - Jul 2001</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">E. T. D. Don Jos&eacute; Beracasa - Maracaibo - Venezuela</h3>
-            <div class="subheading mb-3">Bachiller en Ciencias</div>
+            <div class="subheading mb-3">Bacharel em Ci&ecirc;ncias</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Sep 1992 - Jul 1998</span>
+            <span class="text-primary">Set 1992 - Jul 1998</span>
           </div>
         </div>
 
@@ -293,9 +293,9 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Destrezas</h2>
+        <h2 class="mb-5">Compet&ecirc;ncias</h2>
 
-        <div class="subheading mb-3">Lenguajes de programaci&oacute;n &amp; Herramientas</div>
+        <div class="subheading mb-3">Linguagens de programa&ccedil;&atilde;o &amp; Ferramentas</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
@@ -342,17 +342,17 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Idiomas</h2>
+        <h2 class="mb-5">L&iacute;nguas</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/es">
-            Espa&ntilde;ol - Nativo</a></li>
+            Espanhol - Nativo</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/">
-            Ingles - Intermedio</a></li>
+              Ingl&ecirc;s - Intermedi&aacute;rio</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/pt">
-            Portugu&eacute;s - Intermedio</a></li>
+              Portugu&ecirc;s - Intermedi&aacute;rio</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
             Italiano - Ba&aacute;sico</a></li>
