--- a/it/index.html
+++ b/it/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="adlpaf's resumen">
   <meta name="author" content="adlpaf">
 
-  <title>Alfredo Finol Resume</title>
+  <title>Sintesi del curriculum di Alfredo Finol</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,19 +38,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">Acerca de m&iacute;</a>
+          <a class="nav-link js-scroll-trigger" href="#about">A proposito di me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Esperienza</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Educaci&oacute;n</a>
+          <a class="nav-link js-scroll-trigger" href="#education">Educazione</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Destrezas</a>
+          <a class="nav-link js-scroll-trigger" href="#skills">Competenze</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Idiomas</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Lingue</a>
         </li>
       </ul>
     </div>
@@ -63,10 +63,10 @@
         <h1 class="mb-0">Alfredo
           <span class="text-primary">Finol</span>
         </h1>
-        <div class="subheading mb-5">Avenida Samuel Roman Rojas 926 · Rancagua, Chile · +56 (9) 3487-4823 ·
+        <div class="subheading mb-5">Samuel Roman Rojas Avenue 926 · Rancagua, Cile · +56 (9) 3487-4823 ·
           <a href="mailto:afinol@gmail.com">afinol@gmail.com</a>
         </div>
-        <p class="lead mb-5">Tengo experiencia como Administrador de Sistemas GNU/Linux, y estoy iniciando como desarrollador web utilizando los frameworks &aacute;giles como Laravel, Django y VueJS.</p>
+        <p class="lead mb-5">Ho esperienza come amministratore di sistema GNU/Linux e sto iniziando come sviluppatore web usando framework agili come Laravel, Django e VueJS.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/alfredo-finol-linux-sysadmin/">
             <i class="fab fa-linkedin-in"></i>
@@ -88,118 +88,118 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experiencia</h2>
+        <h2 class="mb-5">Esperienza</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Consultor de desarrollo web</h3>
-            <div class="subheading mb-3">JPV Asociados - Santiago de Chile - Chile</div>
-            <p>Desarrollo de una aplicaci&oacute;n web con Laravel y MySQL, para la generaci&oacute;n de reportes y el env&iacute;o de &eacute;stos a trav&eacute;s de un correo electr&oacute;nico.</p>
+            <h3 class="mb-0">Consulente per lo sviluppo web</h3>
+            <div class="subheading mb-3">JPV Asociados - Santiago del Cile - Cile</div>
+            <p>Sviluppo di un'applicazione web con Laravel e MySQL, per la generazione di report e l'invio di questi tramite e-mail.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ago 2019 - Sep 2019</span>
+            <span class="text-primary">Ago 2019 - Set 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">T&eacute;cnico de recursos inform&aacute;ticos</h3>
+            <h3 class="mb-0">Tecnico informatico</h3>
             <div class="subheading mb-3">Universidad del Zulia - Maracaibo - Venezuela</div>
             <p>
-              Instalaci&oacute;n y configuraci&oacute;n de servidores (web, base de datos, proxy, respaldo, etc). &nbsp;
-              Administraci&oacute;n de correos electronicos. &nbsp;
-              Mantenimiento preventivo y correctivo de servidores en GNU/Linux. &nbsp;
-              Administraci&oacute;n de las bases de datos en MySQL y PostgreSQL. &nbsp;
-              Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores. &nbsp;
-              Desarrollo de aplicaci&oacute;nes web en PHP (nativo) y MySQL.
+              Installazione e configurazione di server (web, database, proxy, backup, ecc.). &nbsp;
+              Amministrazione e-mail. &nbsp;
+              Manutenzione preventiva e correttiva dei server in GNU/Linux. &nbsp;
+              Amministrazione di database in MySQL e PostgreSQL. &nbsp;
+              Sviluppo di script (bash) per il miglioramento delle funzioni del server. &nbsp;
+              Sviluppo di applicazioni web in PHP (nativo) e MySQL.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2012 - Nov 2018</span>
+            <span class="text-primary">Gen 2012 - Nov 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Administrador de Infraestructura</h3>
+            <h3 class="mb-0">Amministratore dell'infrastruttura</h3>
             <div class="subheading mb-3">Delcos Group - Maracaibo - Venezuela</div>
             <p>
-              Instalaci&oacute;n y configuraci&oacute;n de los servidores en AWS y locales. &nbsp;
-              Mantenimiento preventivo y correctivo del servidores remotos y local con Debian GNU/Linux. &nbsp;
-              Administraci&oacute;n de bases de datos MySQL y PostgreSQL. &nbsp;
-              Desarrollo de script (bash) para el mejoramiento de las funci&oacute;nes de los servidores (AWS y local). &nbsp;
-              Desarrollo de aplicaci&oacute;nes web com Python (Django) y PostgreSQL.
+              Installazione e configurazione di server in AWS e locali. &nbsp;
+              Manutenzione preventiva e correttiva di server remoti e locali con Debian GNU/Linux. &nbsp;
+              Amministrazione di database MySQL e PostgreSQL. &nbsp;
+              Sviluppo di script (bash) per il miglioramento delle funzioni del server (AWS e locale). &nbsp;
+              Sviluppo di applicazioni web con Python (Django) e PostgreSQL.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Abr 2017 - Nov 2018</span>
+            <span class="text-primary">Apr 2017 - Nov 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Desarrollador PHP Jr</h3>
+            <h3 class="mb-0">Sviluppatore PHP Jr</h3>
             <div class="subheading mb-3">261 ITSolutions - Maracaibo - Venezuela</div>
-            <p>Desarrollo de una API para una aplicaci&oacute;n m&eacute;dica.</p>
+            <p>Sviluppo di un'API per un'applicazione medica.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Jul 2018 - Nov 2018</span>
+            <span class="text-primary">Lug 2018 - Nov 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Auxiliar docente</h3>
+            <h3 class="mb-0">Assistente didattico</h3>
             <div class="subheading mb-3">UNEFA - Maracaibo - Venezuela</div>
-            <p>Transcripci&oacute;n y dise&ntilde;no de los diferentes libros escrito por los profesores de la instituci&oacute;n.</p>
+            <p>Trascrizione e progettazione dei diversi libri scritti dai professori dell'istituzione.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">May 2008 - Jul 2009</span>
+            <span class="text-primary">Mag 2008 - Lug 2009</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Apoyo t&eacute;cnico</h3>
+            <h3 class="mb-0">Supporto Tecnico</h3>
             <div class="subheading mb-3">REDFEC-LUZ - Maracaibo - Venezuela</div>
             <p>
-              Mantenimiento correctivo y preventivo de los equipos computacionales de la instituci&oacute;n. &nbsp;
-              Instalaci&oacute;n y configuraci&oacute;n de servidores en Debian GNU/Linux. &nbsp;
-              Instalaci&oacute;n y configuraci&oacute;n de red inal&aacute;mbrica.
+              Manutenzione correttiva e preventiva delle apparecchiature informatiche dell'istituzione. &nbsp;
+              Installazione e configurazione di server in Debian GNU/Linux. &nbsp;
+              Installazione e configurazione della rete wireless.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2007 - Jul 2009</span>
+            <span class="text-primary">Gen 2007 - Lug 2009</span>
           </div>
         </div>
   
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Instructor</h3>
+            <h3 class="mb-0">Istruttore</h3>
             <div class="subheading mb-3">ITN Consultores Asociados C.A. - Caracas - Venezuela</div>
-            <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
+            <p>Insegnare lezioni di computer (Introduzione all'informatica e Introduzione a GNU/Linux)</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Mar 2007 - Abr 2007</span>
+            <span class="text-primary">Mar 2007 - Apr 2007</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Instructor</h3>
+            <h3 class="mb-0">Istruttore</h3>
             <div class="subheading mb-3">Alonzo y Asociados - Caracas - Venezuela</div>
-            <p>Impartir clases de computaci&oacute;n (Introducci&oacute;n a la computaci&oacute;n e Introducci&oacute;n a GNU/Linux)</p>
+            <p>Insegnare lezioni di computer (Introduzione all'informatica e Introduzione a GNU/Linux)</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2007 - Feb 2007</span>
+            <span class="text-primary">Gen 2007 - Feb 2007</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Transcriptor</h3>
+            <h3 class="mb-0">Trascrittore</h3>
             <div class="subheading mb-3">Hacer Sistemas C.A. - Maracaibo - Venezuela</div>
-            <p>Transcribir partidas de nacimientos para el sistema desarrollado por la empresa.</p>
+            <p>Trascrivere i certificati di nascita per il sistema sviluppato dall'azienda.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Nov 2006</span>
@@ -208,31 +208,31 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">T&eacute;cnico en reparaci&oacute;n y mantenimiento de computadoras</h3>
+            <h3 class="mb-0">Tecnico di riparazione e manutenzione di computer</h3>
             <div class="subheading mb-3">UDESA-LUZ - Maracaibo - Venezuela</div>
             <p>
-              Mantenimiento preventivo y correctivo de los equipos computacionales. &nbsp;
-              Instalaci&oacute;n de sistemas operativos. &nbsp;
-              Instalaci&oacute;n de distintas aplicaciones inform&aacute;ticas.
+              Manutenzione preventiva e correttiva delle apparecchiature informatiche. &nbsp;
+              Installazione di sistemi operativi. &nbsp;
+              Installazione di diverse applicazioni informatiche.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2003 - Dic 2004</span>
+            <span class="text-primary">Gen 2003 - Dic 2004</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Analista-Programador</h3>
+            <h3 class="mb-0">Analista-Programmer</h3>
             <div class="subheading mb-3">ElectroComputer C.A. - Caracas - Venezuela</div>
             <p>
-              Desarrollo de aplicaciones en Visual Basic 6.0. &nbsp;
-              Dise&ntilde;o de base de datos. &nbsp;
-              Analisis de sistemas.
+              Sviluppo di applicazioni in Visual Basic 6.0. &nbsp;
+              Progettazione di database. &nbsp;
+              Analisi dei sistemi.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Ene 2000 - Dic 2002</span>
+            <span class="text-primary">Gen 2000 - Dic 2002</span>
           </div>
         </div>
 
@@ -244,22 +244,22 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">Educaci&oacute;n</h2>
+        <h2 class="mb-5">Educazione</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Universidad del Zulia - Maracaibo - Venezuela</h3>
-            <div class="subheading mb-3">Licenciado en Computaci&oacute;n</div>
+            <div class="subheading mb-3">Laurea In Informatica</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Mar 2002 - Sin concluir</span>
+            <span class="text-primary">Mar 2002 - Incompiuto</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">URBE - Maracaibo - Venezuela</h3>
-            <div class="subheading mb-3">Diplomado en Ingenier&iacute;a del Software</div>
+            <div class="subheading mb-3">Diploma in Ingegneria del Software</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Nov 2005</span>
@@ -269,20 +269,20 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">I. U. T. Pedro Emilio Coll - Maracaibo - Venezuela</h3>
-            <div class="subheading mb-3">T. S. U. en inform&aacute;tica</div>
+            <div class="subheading mb-3">Tecnico Universitario Superiore in Informatica</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Sep 1998 - Jul 2001</span>
+            <span class="text-primary">Set 1998 - Lug 2001</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">E. T. D. Don Jos&eacute; Beracasa - Maracaibo - Venezuela</h3>
-            <div class="subheading mb-3">Bachiller en Ciencias</div>
+            <h3 class="mb-0">E. T. D. Don Jose Beracasa - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Laurea Triennale</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Sep 1992 - Jul 1998</span>
+            <span class="text-primary">Set 1992 - Lug 1998</span>
           </div>
         </div>
 
@@ -293,9 +293,9 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Destrezas</h2>
+        <h2 class="mb-5">Competenze</h2>
 
-        <div class="subheading mb-3">Lenguajes de programaci&oacute;n &amp; Herramientas</div>
+        <div class="subheading mb-3">Linguaggi di Programmazione &amp; Strumenti</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-html5"></i>
@@ -342,20 +342,20 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Idiomas</h2>
+        <h2 class="mb-5">Lingue</h2>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/es">
-            Espa&ntilde;ol - Nativo</a></li>
+            Spagnolo - Nativo</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/">
-            Ingles - Intermedio</a></li>
+            Inglese - Intermedio</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/pt">
-            Portugu&eacute;s - Intermedio</a></li>
+            Portoghese - Intermedio</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
-            Italiano - Ba&aacute;sico</a></li>
+            Italiano - Basico</a></li>
         </ul>
       </div>
     </section>
