Add latin language in all pages

--- a/index.html
+++ b/index.html
@@ -268,6 +268,9 @@
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
             Italian - Basic</a></li>
+          <li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/ln">
+            Latin - Basic</a></li>
         </ul>
       </div>
     </section>
