--- a/it/index.html
+++ b/it/index.html
@@ -356,7 +356,10 @@
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
             Italiano - Basico</a></li>
-        </ul>
+          <li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/ln">
+            Latino - Basico</a></li>
+          </ul>
       </div>
     </section>
 
