--- a/pt/index.html
+++ b/pt/index.html
@@ -356,6 +356,9 @@
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
             Italiano - B&aacute;sico</a></li>
+          <li>
+            <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/ln">
+            Latim - B&aacute;sico</a></li>
         </ul>
       </div>
     </section>
