Update spanish language page

--- a/es/index.html
+++ b/es/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="adlpaf's resumen">
   <meta name="author" content="adlpaf">
 
-  <title>Alfredo Finol Resume</title>
+  <title>Resumen curricular de Alfredo Finol</title>
 
   <!-- Bootstrap core CSS -->
   <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
