Update English language page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -11,15 +11,15 @@
   <title>Alfredo Finol Resume</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="../css/resume.min.css" rel="stylesheet">
 
 </head>
 
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Alfredo Finol</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../img/profile.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,10 +47,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#skills">Skill</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Languages</a>
@@ -66,10 +63,10 @@
         <h1 class="mb-0">Alfredo
           <span class="text-primary">Finol</span>
         </h1>
-        <div class="subheading mb-5">926 Samuel Roman Rojas Av · Rancagua, Chile · +56 (9) 3487-4823 ·
+        <div class="subheading mb-5">926 Samuel Roman Rojas Ave · Rancagua, Chile · +56 (9) 3487-4823 ·
           <a href="mailto:afinol@gmail.com">afinol@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in GNU/Linux System Administrator, and beginer in agile frameworks like Laravel, Django and VueJS. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I have experience as a GNU / Linux Systems Administrator, and I am starting as a web developer using agile frameworks such as Laravel, Django and VueJS.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/alfredo-finol-linux-sysadmin/">
             <i class="fab fa-linkedin-in"></i>
@@ -95,45 +92,147 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Web Development Consultant</h3>
+            <div class="subheading mb-3">JPV Asociados - Santiago de Chile - Chile</div>
+            <p>Development of a web application with Laravel and MySQL, to generate reports and the sending them through an email.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">Aug 2019 - Sep 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Information Technology Technician</h3>
+            <div class="subheading mb-3">Universidad del Zulia - Maracaibo - Venezuela</div>
+            <p>
+              Server's installation and configuration (web, database, proxy, backup, etc). &nbsp;
+              Email administration. &nbsp;
+              Preventive and corrective maintenance of servers in GNU/Linux. &nbsp;
+              MySQL and PostgreSQL databases administration. &nbsp;
+              Script development (bash) for the improvement of server functions. &nbsp;
+              Web applications development in PHP (native) and MySQL.
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">Jan 2012 - Nov 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Infrastructure Administrator</h3>
+            <div class="subheading mb-3">Delcos Group - Maracaibo - Venezuela</div>
+            <p>
+              AWS and local servers installation and configuration. &nbsp;
+              Preventive and corrective maintenance of remote and local servers with Debian GNU/Linux. &nbsp;
+              MySQL and PostgreSQL databases administration. &nbsp;
+              Script development (bash) for the improvement of server functions (AWS and local). &nbsp;
+              Web applications development with Python (Django) and PostgreSQL.
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">Apr 2017 - Nov 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">PHP Jr Developer</h3>
+            <div class="subheading mb-3">261 ITSolutions - Maracaibo - Venezuela</div>
+            <p>API Development for a medical application.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">Jul 2018 - Nov 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Teaching Assistant</h3>
+            <div class="subheading mb-3">UNEFA - Maracaibo - Venezuela</div>
+            <p>Transcription and design of the different books written by the professors of the institution.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">May 2008 - Jul 2009</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Technical support</h3>
+            <div class="subheading mb-3">REDFEC-LUZ - Maracaibo - Venezuela</div>
+            <p>
+              Corrective and preventive maintenance of the computer equipment of the institution. &nbsp;
+              Servers installation and configuration in Debian GNU/Linux. &nbsp;
+              Installation and configuration of wireless network.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2007 - Jul 2009</span>
+          </div>
+        </div>
+  
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Instructor</h3>
+            <div class="subheading mb-3">ITN Consultores Asociados C.A. - Caracas - Venezuela</div>
+            <p>Teach computer classes (Introduction to computing and Introduction to GNU/Linux)</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Mar 2007 - Apr 2007</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Instructor</h3>
+            <div class="subheading mb-3">Alonzo y Asociados - Caracas - Venezuela</div>
+            <p>Teach computer classes (Introduction to computing and Introduction to GNU/Linux)</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2007 - Feb 2007</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Transcriber</h3>
+            <div class="subheading mb-3">Hacer Sistemas C.A. - Maracaibo - Venezuela</div>
+            <p>Transcribe birth certificates to the system developed by the company.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Nov 2006</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Computer Technician</h3>
+            <div class="subheading mb-3">UDESA-LUZ - Maracaibo - Venezuela</div>
+            <p>
+              Preventive and corrective maintenance of computer equipment. &nbsp;
+              Installing operating systems. &nbsp;
+              Installing different computer applications.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2003 - Dec 2004</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Programmer Analyst</h3>
+            <div class="subheading mb-3">ElectroComputer C.A. - Caracas - Venezuela</div>
+            <p>
+              Application development in Visual Basic 6.0. &nbsp;
+              Database design. &nbsp;
+              System analysis.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jan 2000 - Dec 2002</span>
           </div>
         </div>
 
@@ -147,26 +246,43 @@
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">University of Zulia - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Bachelor of Computer Science</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">Mar 2002 - Unfinished</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">URBE - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Diploma in Software Engineering</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">Nov 2005</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">I. U. T. Pedro Emilio Coll - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Computer Technician</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sep 1998 - Jul 2001</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">E. T. D. Don Jose Beracasa - Maracaibo - Venezuela</h3>
+            <div class="subheading mb-3">Bachelor</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sep 1992 - Jul 1998</span>
           </div>
         </div>
 
@@ -219,34 +335,6 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Analize the actual system</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Responsive design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Design database</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Testing app</li>
-        </ul>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-      <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
       </div>
     </section>
 
@@ -264,7 +352,7 @@
             English - Intermediate</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/pt">
-            Portuguese - Intermediate</a></li>
+              Portuguese - Intermediate</a></li>
           <li>
             <i class="fa-li fa fa-check"></i><a href="https://adlpaf.github.io/it">
             Italian - Basic</a></li>
@@ -278,14 +366,14 @@
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script type="text/javascript" src="vendor/jquery/jquery.min.js"></script>
-  <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="../vendor/jquery/jquery.min.js"></script>
+  <script type="text/javascript" src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script type="text/javascript" src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/resume.min.js"></script>
+  <script src="../js/resume.min.js"></script>
 
 </body>
 
