Update working experience

--- a/es/index.html
+++ b/es/index.html
@@ -92,6 +92,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">PHP Developer</h3>
+            <div class="subheading mb-3">IT Oeste - Buenos Aires - Argentina</div>
+            <p>Desarrollo de aplicacion web con PHP/Laravel y MySQL.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dec 2019 - Actually</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Consultor de desarrollo web</h3>
             <div class="subheading mb-3">JPV Asociados - Santiago de Chile - Chile</div>
             <p>Desarrollo de una aplicaci&oacute;n web con Laravel y MySQL, para la generaci&oacute;n de reportes y el env&iacute;o de &eacute;stos a trav&eacute;s de un correo electr&oacute;nico.</p>
