--- a/index.html
+++ b/index.html
@@ -92,6 +92,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">PHP Developer</h3>
+            <div class="subheading mb-3">IT Oeste - Buenos Aires - Argentina</div>
+            <p>Development of a web application development with PHP/Laravel and MySQL.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dec 2019 - Actually</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Web Development Consultant</h3>
             <div class="subheading mb-3">JPV Asociados - Santiago de Chile - Chile</div>
             <p>Development of a web application with Laravel and MySQL, to generate reports and the sending them through an email.</p>
