--- a/pt/index.html
+++ b/pt/index.html
@@ -92,6 +92,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">PHP Developer</h3>
+            <div class="subheading mb-3">IT Oeste - Buenos Aires - Argentina</div>
+            <p>Desenvolvimento de aplica&ccedil;oes web com PHP/Laravel e MySQL.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dec 2019 - Actually</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Consultor de Desenvolvimento Web</h3>
             <div class="subheading mb-3">JPV Asociados - Santiago de Chile - Chile</div>
             <p>Desenvolvimento de uma aplica&ccedil;&atilde;o web com Laravel e MySQL, para gera&ccedil;&atilde;o de relat&oacute;rios e envio destes pelo email.</p>
