--- a/it/index.html
+++ b/it/index.html
@@ -92,6 +92,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">PHP Developer</h3>
+            <div class="subheading mb-3">IT Oeste - Buenos Aires - Argentina</div>
+            <p>Sviluppo di un'applicazione web con PHP/Laravel e MySQL.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dec 2019 - Actually</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Consulente per lo sviluppo web</h3>
             <div class="subheading mb-3">JPV Asociados - Santiago del Cile - Cile</div>
             <p>Sviluppo di un'applicazione web con Laravel e MySQL, per la generazione di report e l'invio di questi tramite e-mail.</p>
